fixed some spacing when pagination is not present

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -142,3 +142,23 @@ span.picture {
     font-weight: bolder;
     color: #ff6666;
 }
+
+.pagination {
+    margin-bottom: 0px;
+}
+
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+
+.margin-bottom-40 {
+    margin-bottom: 40px;
+}
+
+.margin-top-20 {
+    margin-top: 20px;
+}
+
+.margin-top-40 {
+    margin-top: 40px;
+}
